# hoyogacha

./: Cargo.toml
gacha/: Cargo.toml
gacha/src/: gacha_log.rs  gacha_url.rs  lib.rs
gacha/src/req/: gacha_record.rs  mod.rs  response.rs
gacha_cli/: Cargo.toml
gacha_cli/src/: args.rs  main.rs
uigf/: Cargo.toml
uigf/src/: enum_with_str.rs  hk4e.rs  hkrpg.rs  lib.rs  nap.rs  utils.rs
