[package]
name = "gacha"
version = "0.1.0"
edition = "2021"

[dependencies]
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
regex = "1"
regex-lite = "0.1.6"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
uigf = { path = "../uigf" }
url = "2"
windows = { version = "0.58", features = ["Storage"] }
